# AppLenguajeC

./: CMakeLists.txt  Compilar.txt  Consigna.md  Readme.md  carreras_materias.txt  main.c
data/: usuarios.csv
include/: anotados.h  carreras.h  declaraciones.h  estructuras.h  estudiantes.h  interface.h  lector.h  lista_carreras.h  lista_estudiantes.h  lista_materias.h  materias.h  test.h
src/: anotados.c  carreras.c  estudiantes.c  interface.c  lector.c  lista_carreras.c  lista_estudiantes.c  lista_materias.c  materias.c  test.c
